--- a/.gitignore
+++ b/.gitignore
@@ -9,11 +9,9 @@
 # Build results
 [Dd]ebug/
 [Dd]ebugPublic/
-[Rr]elease/
 x64/
 build/
 bld/
-[Bb]in/
 [Oo]bj/
 
 # Roslyn cache directories
@@ -188,3 +186,8 @@ GeneratedArtifacts/
 _Pvt_Extensions/
 ModelManifest.xml
 /.vs/MHTExport/v15/Server/sqlite3
+/bin/Release/MHTExport.exe.config
+/bin/Release/MHTExport.vshost.exe
+/bin/Release/MHTExport.vshost.exe.config
+/bin/Release/MHTExport.vshost.exe.manifest
+/bin/Release/MHTExport.xml
